--- a/frontend/src/components/forms/event/AddEvent.scss
+++ b/frontend/src/components/forms/event/AddEvent.scss
@@ -52,37 +52,120 @@
       .input-field:focus + .input-label + .input-highlight {
         width: 100%;
       }
-
-      .password-display {
-        @include passwordDisplay;
-      }
     }
 
     .input-error {
       color: $red;
       font-size: $sfs;
       margin: 0.5rem 0 0 0.3rem;
-      
-    }
-
-    .input-consent {
-      @include inputContainer;
-      @include flexRow;
-      align-items: center;
-
-      .consent-checkbox {
-        height: 1.6rem;
-        width: 1.3rem;
-        cursor: pointer;
-      }
-
-      .terms-of-user {
-        color: $blue;
-      }
     }
 
     .add-event-btn {
       @include button3;
     }
   }
+}
+
+/* Up to 480px (very small mobile screens) */
+@media (max-width: 480px) {
+  .event-form-wrapper {
+    .event-form-title {
+      font-size: $nfs;
+    }
+
+    .event-form {
+      .inputs-wrapper {
+        @include flexColumn;
+      }
+
+      .event-address-and-date {
+        @include flexColumn;
+      }
+
+      .input-container {
+        .input-icon {
+          font-size: $sfs;
+        }
+
+        .input-field {
+          font-size: $sfs;
+        }
+
+        .input-label {
+          font-size: $sfs;
+        }
+
+        .input-field:focus + .input-label {
+          font-size: $sfs;
+        }
+      }
+
+      .input-error {
+        color: $red;
+        font-size: $sfs;
+        margin: 0.5rem 0 0 0.3rem;
+      }
+
+      .add-event-btn {
+        font-size: $sfs;
+      }
+    }
+  }
+}
+
+/* Between 481px and 768px (common for most mobile devices) */
+@media (min-width: 481px) and (max-width: 768px) {
+  .event-form-wrapper {
+    .event-form-title {
+      font-size: $afs;
+    }
+
+    .event-form {
+      .inputs-wrapper {
+        @include flexColumn;
+      }
+
+      .event-address-and-date {
+        @include flexColumn;
+      }
+
+      .input-container {
+        .input-icon {
+          font-size: $nfs;
+        }
+
+        .input-field {
+          font-size: $nfs;
+        }
+
+        .input-label {
+          font-size: $nfs;
+        }
+
+        .input-field:focus + .input-label {
+          font-size: $nfs;
+        }
+      }
+
+      .input-error {
+        font-size: $nfs;
+      }
+
+      .add-event-btn {
+        font-size: $nfs;
+      }
+    }
+  }
+}
+
+/* Between 769px and 1024px (ideal for tablets and small laptops) */
+@media (min-width: 769px) and (max-width: 1024px) {
+}
+
+/* Between 1025px and 1200px (standard desktops) */
+@media (min-width: 1025px) and (max-width: 1200px) {
+}
+
+/* 1201px and up (large desktop and TV screens) */
+@media (min-width: 1201px) {
 }
