--- a/frontend/src/components/forms/updateCommittee/UpdateCommitteeMember.scss
+++ b/frontend/src/components/forms/updateCommittee/UpdateCommitteeMember.scss
@@ -36,3 +36,85 @@
     margin-top: 1rem;
   }
 }
+
+/* Up to 480px (very small mobile screens) */
+@media (max-width: 480px) {
+  .add-committee-member-form {
+    .input-container {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+
+      .input-icon {
+        font-size: $sfs;
+      }
+
+      .input-field {
+        font-size: $sfs;
+      }
+
+      .input-label {
+        font-size: $sfs;
+      }
+
+      .input-highlight {
+        font-size: $sfs;
+      }
+
+      .input-field:focus + .input-label {
+        font-size: $sfs;
+      }
+    }
+
+    .add-committee-btn {
+      font-size: $sfs;
+    }
+  }
+}
+
+/* Between 481px and 768px (common for most mobile devices) */
+@media (min-width: 481px) and (max-width: 768px) {
+  .add-committee-member-form {
+    .input-container {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+
+      .input-icon {
+        font-size: $nfs;
+      }
+
+      .input-field {
+        font-size: $nfs;
+      }
+
+      .input-label {
+        font-size: $nfs;
+      }
+
+      .input-highlight {
+        font-size: $nfs;
+      }
+
+      .input-field:focus + .input-label {
+        font-size: $nfs;
+      }
+    }
+
+    .add-committee-btn {
+      font-size: $nfs;
+    }
+  }
+}
+
+/* Between 769px and 1024px (ideal for tablets and small laptops) */
+@media (min-width: 769px) and (max-width: 1024px) {
+}
+
+/* Between 1025px and 1200px (standard desktops) */
+@media (min-width: 1025px) and (max-width: 1200px) {
+}
+
+/* 1201px and up (large desktop and TV screens) */
+@media (min-width: 1201px) {
+}
