--- a/frontend/src/components/forms/updateEvent/UpdateEvent.scss
+++ b/frontend/src/components/forms/updateEvent/UpdateEvent.scss
@@ -2,6 +2,8 @@
 @import "../../../styles/mixins.scss";
 
 .update-event-form {
+  width: 100%;
+  max-width: 100%;
   @include flexColumn;
   margin-top: 0;
 
@@ -45,4 +47,135 @@
     @include button3;
     margin-top: 1rem;
   }
+}
+
+/* Up to 480px (very small mobile screens) */
+@media (max-width: 480px) {
+  .update-event-form {
+    .inputs-wrapper {
+      @include flexColumn;
+      margin: 0;
+    }
+
+    .event-address-and-date {
+      @include flexColumn;
+      margin: 0;
+    }
+
+    .input-container {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+
+      .input-icon {
+        font-size: $sfs;
+      }
+
+      .input-field {
+        font-size: $sfs;
+      }
+
+      .input-label {
+        font-size: $sfs;
+      }
+
+      .input-field:focus + .input-label {
+        font-size: $sfs;
+      }
+    }
+
+    .update-event-btn {
+      font-size: $sfs;
+    }
+  }
+}
+
+/* Between 481px and 768px (common for most mobile devices) */
+@media (min-width: 481px) and (max-width: 768px) {
+  .update-event-form {
+    .inputs-wrapper {
+      @include flexColumn;
+      margin: 0;
+    }
+
+    .event-address-and-date {
+      @include flexColumn;
+      margin: 0;
+    }
+
+    .input-container {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+
+      .input-icon {
+        font-size: $nfs;
+      }
+
+      .input-field {
+        font-size: $nfs;
+      }
+
+      .input-label {
+        font-size: $nfs;
+      }
+
+      .input-field:focus + .input-label {
+        font-size: $nfs;
+      }
+    }
+
+    .update-event-btn {
+      font-size: $nfs;
+    }
+  }
+}
+
+/* Between 769px and 1024px (ideal for tablets and small laptops) */
+@media (min-width: 769px) and (max-width: 1024px) {
+  .update-event-form {
+    .inputs-wrapper {
+      @include flexColumn;
+      margin: 0;
+    }
+
+    .event-address-and-date {
+      @include flexColumn;
+      margin: 0;
+    }
+
+    .input-container {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+
+      .input-icon {
+        font-size: $nfs;
+      }
+
+      .input-field {
+        font-size: $nfs;
+      }
+
+      .input-label {
+        font-size: $nfs;
+      }
+
+      .input-field:focus + .input-label {
+        font-size: $nfs;
+      }
+    }
+
+    .update-event-btn {
+      font-size: $nfs;
+    }
+  }
+}
+
+/* Between 1025px and 1200px (standard desktops) */
+@media (min-width: 1025px) and (max-width: 1200px) {
+}
+
+/* 1201px and up (large desktop and TV screens) */
+@media (min-width: 1201px) {
 }
