--- a/frontend/src/components/parishAdmin/delegations/Delegations.scss
+++ b/frontend/src/components/parishAdmin/delegations/Delegations.scss
@@ -10,3 +10,47 @@
     margin: 2rem 0;
   }
 }
+
+/* Up to 480px (very small mobile screens) */
+@media (max-width: 480px) {
+  .delegated-priests-wrapper {
+    width: $mobile;
+
+    .delegated-priests-title {
+      font-size: $nfs;
+      text-align: center;
+    }
+  }
+}
+
+/* Between 481px and 768px (common for most mobile devices) */
+@media (min-width: 481px) and (max-width: 768px) {
+  .delegated-priests-wrapper {
+    width: $mobile;
+
+    .delegated-priests-title {
+      font-size: $afs;
+      text-align: center;
+    }
+  }
+}
+
+/* Between 769px and 1024px (ideal for tablets and small laptops) */
+@media (min-width: 769px) and (max-width: 1024px) {
+  .delegated-priests-wrapper {
+    width: $tablet;
+
+    .delegated-priests-title {
+      font-size: $aafs;
+      text-align: center;
+    }
+  }
+}
+
+/* Between 1025px and 1200px (standard desktops) */
+@media (min-width: 1025px) and (max-width: 1200px) {
+}
+
+/* 1201px and up (large desktop and TV screens) */
+@media (min-width: 1201px) {
+}
