--- a/frontend/src/components/parishAdmin/serviceCategories/ServiceCategories.scss
+++ b/frontend/src/components/parishAdmin/serviceCategories/ServiceCategories.scss
@@ -2,6 +2,8 @@
 @import "../../../styles/Mixins.scss";
 
 .service-category-table-container {
+  width: $laptop;
+  margin: 1rem auto;
   position: relative;
   .service-category-table-title {
     @include subTitle;
@@ -21,43 +23,154 @@
       @include button2;
     }
   }
-}
-.action-wrapper {
-  @include flexRow;
 
-  .delete {
-    @include deleteIcon;
-  }
-}
+  .action-wrapper {
+    @include flexRow;
 
-.MuiDataGrid-cell {
-  @include flexCenter;
-}
-
-.category-service-delete-confirmation-modal {
-  @include deleteConfirmationModal;
-
-  .delete-confirmation-title {
-    @include deleteConfirmationTitle;
-  }
-
-  .delete-confirmation-statement {
-    @include deleteConfirmationStatement;
-  }
-
-  .confirmation-buttons-wrapper {
-    @include buttonsWrapper;
-
-    .confirm-delete-btn {
-      @include buttonForDelete;
-    }
-
-    .cancel-delete-btn {
-      @include buttonForCancel;
+    .delete-icon {
+      @include deleteIcon;
     }
   }
+
+  .MuiDataGrid-cell {
+    @include flexCenter;
+  }
+
+  .category-service-delete-confirmation-modal {
+    @include deleteConfirmationModal;
+
+    .delete-confirmation-title {
+      @include deleteConfirmationTitle;
+    }
+
+    .delete-confirmation-statement {
+      @include deleteConfirmationStatement;
+    }
+
+    .confirmation-buttons-wrapper {
+      @include buttonsWrapper;
+
+      .confirm-delete-btn {
+        @include buttonForDelete;
+      }
+
+      .cancel-delete-btn {
+        @include buttonForCancel;
+      }
+    }
+  }
 }
 
-.delete-icon {
-  @include deleteIcon;
+/* Up to 480px (very small mobile screens) */
+@media (max-width: 480px) {
+  .service-category-table-container {
+    width: $mobile;
+    .service-category-table-title {
+      font-size: $nfs;
+    }
+
+    .add-new-service-category {
+      .add-new-service-category-title {
+        font-size: $sfs;
+      }
+
+      .add-new-service-category-btn {
+        font-size: $sfs;
+      }
+    }
+
+    .action-wrapper {
+      .delete-icon {
+        font-size: $sfs;
+      }
+    }
+
+    .MuiDataGrid-cell {
+      @include flexCenter;
+    }
+
+    .category-service-delete-confirmation-modal {
+      @include mobileDeleteConfirmationModal;
+
+      .delete-confirmation-title {
+        font-size: $nfs;
+      }
+
+      .delete-confirmation-statement {
+        font-size: $sfs;
+      }
+
+      .confirmation-buttons-wrapper {
+        .confirm-delete-btn {
+          font-size: $sfs;
+        }
+
+        .cancel-delete-btn {
+          font-size: $sfs;
+        }
+      }
+    }
+  }
+}
+
+/* Between 481px and 768px (common for most mobile devices) */
+@media (min-width: 481px) and (max-width: 768px) {
+  .service-category-table-container {
+    width: $tablet;
+    .service-category-table-title {
+      font-size: $afs;
+    }
+
+    .add-new-service-category {
+      .add-new-service-category-title {
+        font-size: $nfs;
+      }
+
+      .add-new-service-category-btn {
+        font-size: $nfs;
+      }
+    }
+
+    .action-wrapper {
+      .delete-icon {
+        font-size: $nfs;
+      }
+    }
+
+    .MuiDataGrid-cell {
+      @include flexCenter;
+    }
+
+    .category-service-delete-confirmation-modal {
+      .delete-confirmation-title {
+        font-size: $afs;
+      }
+
+      .delete-confirmation-statement {
+        font-size: $nfs;
+      }
+
+      .confirmation-buttons-wrapper {
+        .confirm-delete-btn {
+          font-size: $nfs;
+        }
+
+        .cancel-delete-btn {
+          font-size: $nfs;
+        }
+      }
+    }
+  }
+}
+
+/* Between 769px and 1024px (ideal for tablets and small laptops) */
+@media (min-width: 769px) and (max-width: 1024px) {
+}
+
+/* Between 1025px and 1200px (standard desktops) */
+@media (min-width: 1025px) and (max-width: 1200px) {
+}
+
+/* 1201px and up (large desktop and TV screens) */
+@media (min-width: 1201px) {
 }
