--- a/frontend/src/components/parishAdmin/subscribers/SubscriberNotification.scss
+++ b/frontend/src/components/parishAdmin/subscribers/SubscriberNotification.scss
@@ -18,6 +18,10 @@
       position: relative;
       @include flexColumn;
 
+      .subject {
+        font-size: $nfs;
+      }
+
       .icon {
         position: absolute;
         top: 2.7rem;
@@ -39,4 +43,96 @@
       @include button3;
     }
   }
+}
+
+/* Up to 480px (very small mobile screens) */
+@media (max-width: 480px) {
+  .subscribers-notification-wrapper {
+    width: $mobile;
+    padding: 1rem;
+
+    .subscribers-notification-title {
+      margin: 1rem 0;
+      font-size: 0.85rem;
+    }
+
+    .subscribers-notification-form {
+      .input-container {
+        .icon {
+          position: absolute;
+          top: 2.7rem;
+          left: 0.5rem;
+          font-size: $sfs;
+        }
+
+        .subject {
+          font-size: $sfs;
+        }
+
+        .input-field {
+          font-size: $sfs;
+        }
+
+        .input-error {
+          font-size: $sfs;
+        }
+      }
+
+      .subscriber-notification-btn {
+        font-size: $sfs;
+      }
+    }
+  }
+}
+
+/* Between 481px and 768px (common for most mobile devices) */
+@media (min-width: 481px) and (max-width: 768px) {
+  .subscribers-notification-wrapper {
+    width: $tablet;
+    padding: 1rem;
+
+    .subscribers-notification-title {
+      margin: 1rem 0;
+      font-size: $afs;
+    }
+
+    .subscribers-notification-form {
+      .input-container {
+        .icon {
+          position: absolute;
+          top: 2.7rem;
+          left: 0.5rem;
+          font-size: $nfs;
+        }
+
+        .subject {
+          font-size: $nfs;
+        }
+
+        .input-field {
+          font-size: $nfs;
+        }
+
+        .input-error {
+          font-size: $nfs;
+        }
+      }
+
+      .subscriber-notification-btn {
+        font-size: $nfs;
+      }
+    }
+  }
+}
+
+/* Between 769px and 1024px (ideal for tablets and small laptops) */
+@media (min-width: 769px) and (max-width: 1024px) {
+}
+
+/* Between 1025px and 1200px (standard desktops) */
+@media (min-width: 1025px) and (max-width: 1200px) {
+}
+
+/* 1201px and up (large desktop and TV screens) */
+@media (min-width: 1201px) {
 }
