--- a/frontend/src/components/parishAdmin/videoUpload/VideoUpload.scss
+++ b/frontend/src/components/parishAdmin/videoUpload/VideoUpload.scss
@@ -61,3 +61,111 @@
     }
   }
 }
+
+/* Up to 480px (very small mobile screens) */
+@media (max-width: 480px) {
+  .video-upload-container {
+    max-width: $mobile;
+    padding: 1rem;
+
+    .video-upload-title {
+      font-size: $nfs;
+      padding: 0;
+      text-align: center
+    }
+
+    .video-upload-form {
+      @include flexColumn;
+      margin-top: 2rem;
+      padding: 0;
+
+      .input-container {
+        .input-label {
+          font-size: $sfs;
+        }
+
+        .icon {
+          font-size: $nfs;
+        }
+
+        .input-field {
+          font-size: $sfs;
+        }
+      }
+
+      .input-error {
+        font-size: $sfs;
+      }
+
+      .video-submit-btn {
+        font-size: $sfs;
+      }
+    }
+
+    .video-preview {
+      .video-preview-title {
+        font-size: $sfs;
+      }
+    }
+  }
+}
+
+/* Between 481px and 768px (common for most mobile devices) */
+@media (min-width: 481px) and (max-width: 768px) {
+  .video-upload-container {
+    max-width: $tablet;
+    padding: 1rem;
+
+    .video-upload-title {
+      font-size: $afs;
+      padding: 0;
+      text-align: center
+    }
+
+    .video-upload-form {
+      @include flexColumn;
+      margin-top: 2rem;
+      padding: 0;
+
+      .input-container {
+        .input-label {
+          font-size: $nfs;
+        }
+
+        .icon {
+          font-size: $nfs;
+        }
+
+        .input-field {
+          font-size: $nfs;
+        }
+      }
+
+      .input-error {
+        font-size: $nfs;
+      }
+
+      .video-submit-btn {
+        font-size: $nfs;
+      }
+    }
+
+    .video-preview {
+      .video-preview-title {
+        font-size: $nfs;
+      }
+    }
+  }
+}
+
+/* Between 769px and 1024px (ideal for tablets and small laptops) */
+@media (min-width: 769px) and (max-width: 1024px) {
+}
+
+/* Between 1025px and 1200px (standard desktops) */
+@media (min-width: 1025px) and (max-width: 1200px) {
+}
+
+/* 1201px and up (large desktop and TV screens) */
+@media (min-width: 1201px) {
+}
