--- a/frontend/src/views/adminPages/updateEventPage/UpdateEventPage.scss
+++ b/frontend/src/views/adminPages/updateEventPage/UpdateEventPage.scss
@@ -6,11 +6,64 @@
     width: 60%;
     margin: 2rem auto;
     background-color: $form-bg;
-    padding: 2rem ;
+    padding: 2rem;
 
     .update-event-page-title {
       @include title;
       margin-bottom: 1rem;
     }
   }
+}
+
+/* Up to 480px (very small mobile screens) */
+@media (max-width: 480px) {
+  .update-event-page {
+    .update-event-page-container {
+      width: $tablet;
+
+      padding: 1rem;
+
+      .update-event-page-title {
+        font-size: $nfs;
+      }
+    }
+  }
+}
+
+/* Between 481px and 768px (common for most mobile devices) */
+@media (min-width: 481px) and (max-width: 768px) {
+  .update-event-page {
+    .update-event-page-container {
+      width: $tablet;
+
+      padding: 1rem;
+
+      .update-event-page-title {
+        font-size: $afs;
+      }
+    }
+  }
+}
+
+/* Between 769px and 1024px (ideal for tablets and small laptops) */
+@media (min-width: 769px) and (max-width: 1024px) {
+  .update-event-page {
+    .update-event-page-container {
+      width: $laptop;
+
+      padding: 1rem;
+
+      .update-event-page-title {
+        font-size: $nfs;
+      }
+    }
+  }
+}
+
+/* Between 1025px and 1200px (standard desktops) */
+@media (min-width: 1025px) and (max-width: 1200px) {
+}
+
+/* 1201px and up (large desktop and TV screens) */
+@media (min-width: 1201px) {
 }
